2013-08-13  Steve Ellcey  <sellcey@mips.com>

	* config/mips/mips.md (prefetch): Use lw instead of ld on
	loongson in 32bit mode.

2013-08-13  Nick Clifton  <nickc@redhat.com>

	* config.gcc: (avr-linux): Allow for tmake_file not being empty.

2013-08-13  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (cgraph_turn_edge_to_speculative): Return newly
	introduced edge; fix typo in sanity check.
	(cgraph_resolve_speculation): Export; improve diagnostic.
	(cgraph_redirect_edge_call_stmt_to_callee): Better diagnostic; cancel
	speculation at type mismatch.
	* cgraph.h (cgraph_turn_edge_to_speculative): Update.
	(cgraph_resolve_speculation): Declare.
	(symtab_can_be_discarded): New function.
	* value-prof.c (gimple_ic_transform): Remove actual transform code.
	* ipa-inline-transform.c (speculation_removed): New global var.
	(clone_inlined_nodes): See if speculation can be removed.
	(inline_call): If speculations was removed, we growths may not match.
	* ipa-inline.c (can_inline_edge_p): Add DISREGARD_LIMITS parameter.
	(speculation_useful_p): New function.
	(resolve_noninline_speculation): New function.
	(inline_small_functions): Resolve useless speculations.
	* ipa-inline.h (speculation_useful_p): Declare
	* ipa.c (can_replace_by_local_alias): Simplify.
	(ipa_profile): Produce speculative calls in non-lto, too;
	add simple cost model; produce local aliases.

2013-08-13  David Malcolm  <dmalcolm@redhat.com>

	* config/i386/t-i386 (i386.o): Rename stray PIPELINE_H to
	PASS_MANAGER_H

2013-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	* config/i386/i386.c (ix86_function_versions): Use error + inform.

2013-08-12  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (floatunssi<mode>2 expand): Use MODEF mode
	iterator instead of X87MODEF.

2013-08-12  Perez Read  <netfirewall@gmail.com>

	PR target/58132
	* config/i386/i386.md (*movabs<mode>_1):  Add <ptrsize> PTR before
	operand 0 for intel asm alternative.
	(*movabs<mode>_2): Ditto for operand 1.
